# kill_the_shell

./: .excalidraw  .gitignore  README.md  actions_externals.py  actions_internals.py  llm_kernel.py  main.py  models.py  pyproject.toml  requirements.txt  router.py  utils.py
kill-the-abstraction-ui/: index.html  package-lock.json  package.json
kill-the-abstraction-ui/src/: App.jsx  index.css
kill-the-abstraction-ui/src/components/: MemoryPane.jsx  ProcessNode.jsx  TerminalPane.jsx
