[project]
name = "terminal-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "ipykernel>=7.3.0",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
